--- a/src/quizRender/templates/take_quiz_elements/text_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/text_input_element.html
@@ -1,4 +1,4 @@
-<textarea required
+<textarea 
           {% if not checked_db %}
               hx-trigger = 'load'
               hx-swap=outerHTML
