--- a/src/quizRender/templates/take_quiz_elements/multiple_choice_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/multiple_choice_input_element.html
@@ -8,7 +8,7 @@
 
 
 
-    <select required style="opacity:0; position:fixed;"
+    <select  style="opacity:0; position:fixed;"
 
 
             id="question_{{element.id}}" name="{{element.id}}" id="multiC_{{element.id}}" class="form-select " multiple
