--- a/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
@@ -7,7 +7,7 @@
 >
 
 
-    <select required style="opacity:0; position:fixed;"
+    <select  style="opacity:0; position:fixed;"
 
 
             id="question_{{element.id}}" name="{{element.id}}" id="singleC_{{element.id}}" class="form-select"
