Add optional required satisfied unsatisfied element

--- a/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
+++ b/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
@@ -52,7 +52,7 @@
             hx-encoding="multipart/form-data"
         >
             <div class="input-group my-2">
-                <textarea type="text" name="choice_name" class="form-control" maxlength="5000" columns=30 rows=10 placeholder="Enter your question here"></textarea>
+                <textarea required type="text" name="choice_name" class="form-control" maxlength="5000" columns=30 rows=10 placeholder="Enter your question here"></textarea>
                 <div class="input-group-append">
                     <button style="top:-3px" class="btn btn-primary site-button" type="submit">Add</button>
                 </div>
