--- a/src/quizCreation/templates/element_forms/AddRowSatisfiedUnsatisfiedModal.html
+++ b/src/quizCreation/templates/element_forms/AddRowSatisfiedUnsatisfiedModal.html
@@ -14,6 +14,7 @@
                         <tr>
                             <th>Question number</th>
                             <th>Question title</th>
+                            <th>Required?</th>
                             <th>Delete</th>
                         </tr>
                     </thead>
@@ -25,6 +26,9 @@
                                 <td>{{choice.position}}</td>
 
                                 <td><div class="d-flex align-items-left">{{choice.title}}</div></td>
+                                <td>
+                                    {% if choice.required %}Yes {% else %}No{% endif %}
+                                </td>
 
                                 <td style="justify-content: right;" class="d-flex">
                                     <div class="d-flex align-items-right">
@@ -52,10 +56,16 @@
             hx-encoding="multipart/form-data"
         >
             <div class="input-group my-2">
-                <textarea type="text" name="choice_name" class="form-control" maxlength="5000" columns=30 rows=10 placeholder="Enter your question here"></textarea>
+                <textarea required type="text" name="choice_name" class="form-control" maxlength="5000" columns=30 rows=10 placeholder="Enter your question here"></textarea>
                 <div class="input-group-append">
                     <button style="top:-3px" class="btn btn-primary site-button" type="submit">Add</button>
                 </div>
+            </div>
+
+            <div class="my-1">
+
+                Tick to make this question required
+                <input type="checkbox" name="required" field_title="Tick to make this question required" class=" border-dark " id="">
             </div>
 
             <div class="my-2">
