--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_row.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_row.html
@@ -12,22 +12,30 @@
     >
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5">
             {{question.title}}
+            <small>
+                {% if question.required  %}
+                *
+                {% else %}
+                (optional)
+                {% endif %}
+            </small>
+        
         </td>
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5"
         >
-            <label class="radio-inline"><input type="radio" required  name="{{question.id}}" value="Mostly agree" ></label>
+            <label class="radio-inline"><input type="radio" {% if question.required %} required {% endif %}  name="{{question.id}}" value="Mostly agree" ></label>
         </td>
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5">
-            <label class="radio-inline"><input type="radio" required  name="{{question.id}}" value="Agree"></label>
+            <label class="radio-inline"><input type="radio" {% if question.required %} required {% endif %}  name="{{question.id}}" value="Agree"></label>
         </td>
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5">
-            <label class="radio-inline"><input type="radio" required  name="{{question.id}}" value="Not sure"></label>
+            <label class="radio-inline"><input type="radio" {% if question.required %} required {% endif %}  name="{{question.id}}" value="Not sure"></label>
         </td>
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5">
-            <label class="radio-inline"><input type="radio" required  name="{{question.id}}" value="Disagree"></label>
+            <label class="radio-inline"><input type="radio" {% if question.required %} required {% endif %}  name="{{question.id}}" value="Disagree"></label>
         </td>
         <td class="border-dark text-center" onclick="(this).querySelector('input').click()"  class="py-5">
-            <label class="radio-inline"><input type="radio" required  name="{{question.id}}" value="Mostly disagree"></label>
+            <label class="radio-inline"><input type="radio" {% if question.required %} required {% endif %}  name="{{question.id}}" value="Mostly disagree"></label>
         </td>
     </tr>
 </div>
