--- a/src/quizRender/templates/quiz_completed_content.html
+++ b/src/quizRender/templates/quiz_completed_content.html
@@ -194,12 +194,11 @@
                 </div>
             </div>
         {% endif %}
-
+{% comment %} 
         <strong class="my-3">
             Summary
-        </strong>
-
-        {% include 'quizData/response_details_render.html' %}
+        </strong> 
+         {% include 'quizData/response_details_render.html' %} {% endcomment %}
 
     </div>
 </div>
