--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -103,6 +103,37 @@
                 </div>
 
                 <a href="{% url 'add_product_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2 ">Add product </a>
+                
+                <button type="button" class="btn btn-primary site-secondary-button m-2" data-toggle="modal" data-target="#embedWebsite">Embed on website</button>
+
+                <div class="modal fade" id="embedWebsite">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Embed quiz on website</h5>
+                                <button type="button" class="close" data-dismiss="modal"><span>×</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+
+ 
+                                Copy and paste this code to your websites HTML where you want the quiz to show
+                                <br><br>
+                                <pre>
+&#x3C;iframe src="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" frameborder="0" width="100%" height="800px" &#x3E;&#x3C;/iframe&#x3E;
+
+                                </pre>
+
+
+
+
+                            </div>
+                            <div class="text-center mb-3 pb-1">
+                                <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
                 
