--- a/src/quizRender/templates/take_quiz/includes/footer.html
+++ b/src/quizRender/templates/take_quiz/includes/footer.html
@@ -27,19 +27,15 @@
         <p>Copyright © <script>document.write(new Date().getFullYear())</script>.
         </p>
         {% if quiz.logo %}
-        <a class="text-center justify-content-center text-center d-flex mx-auto my-2" href="{% url 'home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
 
                 <span class="">
                     <img src="{{quiz.logo.url}}" alt="" style="max-width:80%;max-height:5rem;">
                 </span>
-        </a>
                 {% endif %}
                
-              <a href="{% url 'home' %}">
                   <p class="text-center mt-4">
-                      Powered by quizElements
+                      Powered by www.quizelements.com
                     </p>
-                </a>  
             
 
 
