Fix glitch with make require field

--- a/src/quizCreation/templates/element_forms/TextInput.html
+++ b/src/quizCreation/templates/element_forms/TextInput.html
@@ -21,7 +21,7 @@
         {{form.media}}
         {% for field in form %}
             {{field.field.widget.attrs.field_title}}
-            <input type="text" class="form-control border-dark " name="{{field.name}}" placeholder="Enter your text here">
+            {{field}}        
         {% endfor %}
 
         <div class="my-3 text-center">
