--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -85,7 +85,7 @@
     <div class="row p-3 ">
         <h2>Example quiz</h2>        
         {% autoescape off %}
-        <iframe src="http://127.0.0.1:8000/render_quiz/take_quiz/37" title="description" width="100%" height="800px"></iframe> 
+        <iframe src="https://www.quizelements.com/render_quiz/take_quiz/2/" title="description" width="100%" height="800px"></iframe> 
         {% endautoescape %}
     </div>
 
