Allow creation of review element

--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -10,6 +10,7 @@
     <option value="AgreeDisagree" id="option_AgreeDisagree"></option>
     <option value="ImageDisplay" id="option_ImageDisplay"></option>
     <option value="SatisfiedUnsatisfied" id="option_SatisfiedUnsatisfied"></option>
+    <option value="ReviewStars" id="option_ReviewStars"></option>
 
 
 </select>
@@ -38,6 +39,17 @@
         <div class="text-center py-2">
             <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Satisfied Unsatisfied </h4>
             <p class="text-small">A table of questions where users can answer mostly satisfied, unsatisfied etc...</p>
+            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+        </div>
+    </div>
+
+    <div role="button" onclick="SelectDeselect(this);" id="card_ReviewStars"
+    class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=ReviewStars style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Review stars <br>
+            <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> 
+        </h4>
+            <p class="text-small">1 to 5 star review question</p>
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
     </div>
