--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -14,7 +14,9 @@
             <h5 class="mx-3 mb-3">Editing page: {{quiz_page.title}}</h5>
             <div class="ml-auto m-2 mb-5">
 
-                <a href="" class="btn btn-primary float-right ">Reload</a>
+                <a href="" class="btn btn-primary site-secondary-button float-right ">
+                    <i class="fa fa-refresh"></i>
+                    Reload</a>
             </div>
 
             <div
