--- a/src/quizRender/templates/quiz_form.html
+++ b/src/quizRender/templates/quiz_form.html
@@ -54,6 +54,9 @@
                     {% include 'take_quiz_elements/email_input_element.html' %}
                 {% elif element.get_element_type.type == 'Number input'  %}
                     {% include 'take_quiz_elements/number_input_element.html' %}
+                {% elif element.get_element_type.type == 'Review stars'  %}
+                    {% include 'take_quiz_elements/review_stars.html' %}
+
                 {% elif element.get_element_type.type == 'Multiple choice question'  %}
                     {% include 'take_quiz_elements/multiple_choice_input_element.html' %}
                 {% elif element.get_element_type.type == 'Single choice question'  %}
