--- a/src/quizRender/templates/take_quiz_elements/review_stars.html
+++ b/src/quizRender/templates/take_quiz_elements/review_stars.html
@@ -5,7 +5,7 @@
             display: inline-block;
           }
           
-          input.star { display: none; }
+          input.star { opacity:0; width:1px }
           
           label.star {
             float: right;
@@ -36,24 +36,33 @@
           }
           
        </style>
-       <div class="row" style="  flex-direction: row-reverse;justify-content: left;">
+       <div id="question_{{element.id}}" class="row rating_star{{element.id}}" style="  flex-direction: row-reverse;justify-content: left;"
+       
+       {% if not checked_db %}
+       hx-trigger = 'load'
+       hx-swap=outerHTML
+       hx-get={% url 'get_value_stored_in_db'  quiz_page.quiz.id element.id response_id%}
+   {% endif %}
+       >
 
-           <input name="{{element.id}}" value="1"  class="star star-1" id="star-1" type="radio" name="star"/>
+           <input name="{{element.id}}" value="5"  class="star star-1" id="star-1" type="radio" name="star"/>
            <label class="star star-1" for="star-1"></label>
-           <input name="{{element.id}}" value="2"  class="star star-2" id="star-2" type="radio" name="star"/>
+           <input name="{{element.id}}" value="4"  class="star star-2" id="star-2" type="radio" name="star"/>
            <label class="star star-2" for="star-2"></label>
            <input name="{{element.id}}" value="3"  class="star star-3" id="star-3" type="radio" name="star"/>
            <label class="star star-3" for="star-3"></label>
-           <input name="{{element.id}}" value="4"  class="star star-4" id="star-4" type="radio" name="star"/>
+           <input name="{{element.id}}" value="2"  class="star star-4" id="star-4" type="radio" name="star"/>
            <label class="star star-4" for="star-4"></label>
-           <input name="{{element.id}}" value="5"  class="star star-5" id="star-5" type="radio" name="star"/>
+           <input name="{{element.id}}" value="1"  class="star star-5" id="star-5" type="radio" name="star"/>
            <label class="star star-5" for="star-5"></label>
         </div>
 
+{% if answer %}
+<script>
 
-        {% if not checked_db %}
-        hx-trigger = 'load'
-        hx-swap=outerHTML
-        hx-get={% url 'get_value_stored_in_db'  quiz_page.quiz.id element.id response_id%}
-    {% endif %}
-    {% if answer %}value="{{answer.answer}}"{% endif %}
+    review_star{{element.id}} = document.querySelector('.rating_star{{element.id}}')
+
+    console.log(review_star{{element.id}})
+</script>
+{{answer.answer}}
+{% endif %}
